--- a/apps/user_system/templates/password_reset.html
+++ b/apps/user_system/templates/password_reset.html
@@ -1,29 +1,56 @@
-{% load i18n %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Password reset </title>
+</head>
+<body>
 
-{% block subject %}
-{% blocktrans %}Password reset on {{ site_name }}{% endblocktrans %}
-{% endblock subject %}
+    {% load i18n %}
 
-{% block text_body %}
-{% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
+    {% block subject %}
+    {% blocktrans %}Password reset on {{ site_name }}{% endblocktrans %}
+    {% endblock subject %}
 
-{% trans "Please go to the following page and choose a new password:" %}
-{{ protocol }}://{{ domain }}/{{ url|safe }}
-{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
+    {% block text_body %}
+    {% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
 
-{% trans "Thanks for using our site!" %}
+    {% trans "Please go to the following page and choose a new password:" %}
+    {{ protocol }}://{{ domain }}/{{ url|safe }}
+    {% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
-{% endblock text_body %}
+    {% trans "Thanks for using our site!" %}
 
-{% block html_body %}
-<p>{% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}</p>
+    {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+    {% endblock text_body %}
 
-<p>{% trans "Please go to the following page and choose a new password:" %}</p>
-<a href="{{ protocol }}://{{ domain }}/{{ url|safe }}">{{ protocol }}://{{ domain }}/{{ url|safe }}</a>
-<p>{% trans "Your username, in case you've forgotten:" %} <b>{{ user.get_username }}</b></p>
+    {% block html_body %}
 
-<p>{% trans "Thanks for using our site!" %}</p>
+    <h1 style ="font-size: 35px; "> IMPACT X </h1>
 
-<p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}-----</p>
-{% endblock html_body %}
+    <h1> ⚠️⚠️⚠️ </h1>
+
+    <p style = "font-size = 17px">
+        Está recibiendo este correo electrónico porque solicitó un restablecimiento de contraseña para su cuenta de usuario en IMPACT X
+    </p>
+
+    <p style = "font-size = 17px">
+        Vaya a la siguiente página y configure una nueva contraseña:
+    </p>
+
+    <p style = "font-size = 16px">
+        <a href="{{ protocol }}://{{ domain }}/{{ url|safe }}">{{ protocol }}://{{ domain }}/{{ url|safe }}</a>
+    </p>
+
+    <p style = "font-size : 15px"> Su nombre de usuario es: <b>{{ user.get_username }}</b></p>
+
+    <div style = "margin-top: 35px">
+        <h3> Gracias por utilizar nuestro sitio </h3>
+        <h3 style = "color: rgb(56, 168, 56);"> El equipo de IMPACT X </h3>
+    </div>
+
+    {% endblock html_body %}
+
+</body>
+</html>
