--- a/apps/user_system/templates/password_changed_confirmation.html
+++ b/apps/user_system/templates/password_changed_confirmation.html
@@ -1,21 +1,41 @@
-{% load i18n %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Password_changed_confirmation </title>
+</head>
+<body>
+    {% load i18n %}
 
-{% block subject %}
-{% blocktrans %}{{ site_name }} - Your password has been successfully changed!{% endblocktrans %}
-{% endblock %}
+    {% block subject %}
+    {% blocktrans %}{{ site_name }} - Your password has been successfully changed!{% endblocktrans %}
+    {% endblock %}
 
-{% block text_body %}
-{% trans "Your password has been changed!" %}
+    {% block text_body %}
+    {% trans "Your password has been changed!" %}
 
-{% trans "Thanks for using our site!" %}
+    {% trans "Thanks for using our site!" %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
-{% endblock text_body %}
+    {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+    {% endblock text_body %}
 
-{% block html_body %}
-<p>{% trans "Your password has been changed!" %}</p>
+    {% block html_body %}
 
-<p>{% trans "Thanks for using our site!" %}</p>
+    <h1 style ="font-size: 35px; "> IMPACT X </h1>
 
-<p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}-----</p>
-{% endblock html_body %}
+    <h1> 🔒🔒🔒 </h1>
+
+    <p style = "font-size : 16px">
+        Tu contraseña a sido cambiada correctamente 🔱
+    </p>
+
+    <div style = "margin-top: 35px">
+        <h3> Gracias por utilizar nuestro sitio </h3>
+        <h3 style = "color: rgb(56, 168, 56);"> El equipo de IMPACT X </h3>
+    </div>
+
+    {% endblock html_body %}
+
+</body>
+</html>
