--- a/apps/user_system/templates/confirmation.html
+++ b/apps/user_system/templates/confirmation.html
@@ -22,17 +22,25 @@
     {% endblock text_body %}
 
     {% block html_body %}
-    <h1 style ="font-size: 35px; "> IMPACT X </h1>
 
-    <p style = "font-size : 17px"> ¡Su cuenta ha sido creada y está lista para usar! 🧭🧭🧭 </p>
+    <h1 style ="font-size: 35px; margin :0px; margin-bottom : 8px "> IMPACT X </h1>
 
-    <p style = "font-size : 17px"> Gracias por usar nuestro sitio 🛠️</p>
+    <h3 style = "color: rgb(56, 168, 56);font-size: 22px; margin : 0px">
+        Free live webinar 
+    </h3> 
 
-    <img src="https://impulsodigital.space/wp-content/uploads/2021/08/img_icon_banner_home-1.png" alt="img" />
+    <p style = "font-size : 18px;margin : 0px"> ¡Su cuenta ha sido creada y está lista para usar!  </p>
 
+    <p style = "font-size : 18px; margin : 0px"> Gracias por usar nuestro sitio </p>
+
+    <p style = "font-size : 40px;"> 🛠️🛠️🛠️ </p>
+
+    <div class="container">
+        <img src="https://cdn-icons-png.flaticon.com/512/3043/3043893.png" alt="img" width="35%">
+    </div>
+    
     <div style = "margin-top: 35px">
-        <h3> Gracias por utilizar nuestro sitio </h3>
-        <h3 style = "color: rgb(56, 168, 56);"> El equipo de IMPACT X </h3>
+        <h2 style = "color: rgb(56, 168, 56);"> El equipo de IMPACT X </h2>
     </div>
 
     {% endblock html_body %}
