--- a/apps/user_system/templates/password_changed_confirmation.html
+++ b/apps/user_system/templates/password_changed_confirmation.html
@@ -22,13 +22,19 @@
 
     {% block html_body %}
 
-    <h1 style ="font-size: 35px; "> IMPACT X </h1>
+    <h1 style ="font-size: 35px; margin :0px; margin-bottom : 8px "> IMPACT X </h1>
 
-    <h1> 🔒🔒🔒 </h1>
+    <h3 style = "color: rgb(56, 168, 56);font-size: 22px; margin : 0px">
+        Free live webinar 
+    </h3> 
 
-    <p style = "font-size : 16px">
-        Tu contraseña a sido cambiada correctamente 🔱
+    <p style = "font-size : 18px">
+         Tu contraseña a sido cambiada correctamente 
     </p>
+
+    <div class="container">
+        <img src=" https://cdn-icons-png.flaticon.com/512/6146/6146587.png" alt="img" width="35%">
+    </div>
 
     <div style = "margin-top: 35px">
         <h3> Gracias por utilizar nuestro sitio </h3>
