--- a/apps/user_system/templates/password_reset.html
+++ b/apps/user_system/templates/password_reset.html
@@ -27,27 +27,33 @@
 
     {% block html_body %}
 
-    <h1 style ="font-size: 35px; "> IMPACT X </h1>
+    <h1 style ="font-size: 35px; margin :0px; margin-bottom : 8px "> IMPACT X </h1>
 
-    <h1> ⚠️⚠️⚠️ </h1>
+    <h3 style = "color: rgb(56, 168, 56);font-size: 22px; margin : 0px">
+        Free live webinar 
+    </h3> 
 
-    <p style = "font-size = 17px">
-        Está recibiendo este correo electrónico porque solicitó un restablecimiento de contraseña para su cuenta de usuario en IMPACT X
+    <p style = "font-size : 30px;margin:0px;"> ⚠️⚠️⚠️ </p>
+    
+    <p style = "font-size : 18px; margin : 0px"> 
+        Solicitud de restablecimiento de contraseña para su cuenta en IMPACT X
     </p>
 
-    <p style = "font-size = 17px">
-        Vaya a la siguiente página y configure una nueva contraseña:
+    <p style = "font-size : 18px; margin : 0px; font-weight: bold;margin-bottom : 10px"> 
+        Dar click en el siguiente boton para restablecer contraseña:
     </p>
 
-    <p style = "font-size = 16px">
-        <a href="{{ protocol }}://{{ domain }}/{{ url|safe }}">{{ protocol }}://{{ domain }}/{{ url|safe }}</a>
+    <button style = "font-size : 24px; background: rgb(70, 187, 70); padding: 10px 30px; border: none; border-radius: 12px;">
+        <a style = "color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/{{ url|safe }}"> Contraseña </a>
+    </button>
+
+    <p style = "font-size : 18px; margin : 0px"> 
+        Su correo es: <b>{{ user.get_username }}</b>
     </p>
 
-    <p style = "font-size : 15px"> Su nombre de usuario es: <b>{{ user.get_username }}</b></p>
-
-    <div style = "margin-top: 35px">
-        <h3> Gracias por utilizar nuestro sitio </h3>
-        <h3 style = "color: rgb(56, 168, 56);"> El equipo de IMPACT X </h3>
+    <div style = "margin-top: 30px">
+        <h2> Gracias por utilizar nuestro sitio </h2>
+        <h2 style = "color: rgb(56, 168, 56);"> El equipo de IMPACT X </h2>
     </div>
 
     {% endblock html_body %}
