implementacion de sistema de likes publicos

--- a/apps/user_system/templates/password_reset.html
+++ b/apps/user_system/templates/password_reset.html
@@ -43,7 +43,7 @@
         Dar click en el siguiente boton para restablecer contraseña:
     </p>
 
-    <button style = "font-size : 24px; background: rgb(70, 187, 70); padding: 10px 30px; border: none; border-radius: 12px;">
+    <button style = "font-size : 24px; background: rgb(70, 187, 70); padding: 10px 30px; border: none; border-radius: 12px;margin-bottom : 10px;">
         <a style = "color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/{{ url|safe }}"> Contraseña </a>
     </button>
 
