--- a/apps/user_system/templates/activation.html
+++ b/apps/user_system/templates/activation.html
@@ -53,7 +53,7 @@
         </p>
 
         <button style = "font-size : 24px; background: rgb(70, 187, 70); padding: 10px 33px; border: none; border-radius: 12px;">
-            <a style = "color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/{{ url|safe }}"> Activar </a>
+            <a style = "color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/#/{{ url|safe }}"> Activar </a>
         </button>
 
         <p style = "font-size : 20px">
