--- a/apps/user_system/templates/password_reset.html
+++ b/apps/user_system/templates/password_reset.html
@@ -44,7 +44,7 @@
     </p>
 
     <button style = "font-size : 24px; background: rgb(70, 187, 70); padding: 10px 30px; border: none; border-radius: 12px;margin-bottom : 10px;">
-        <a style = "color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/{{ url|safe }}"> Contraseña </a>
+        <a style = "color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/#/{{ url|safe }}"> Contraseña </a>
     </button>
 
     <p style = "font-size : 18px; margin : 0px"> 
